# Twitch-Channel-Points-Miner-v2

./: .env.example  .gitignore  Dockerfile  README.md  check_network.py  deploy.sh  keep_alive.py  localRunner.py  miner.conf  network_example.py  pickle_view.py  pre_run.py  prepare_miner.py  pyproject.toml  requirements.txt  run.py  setup.py  start_simple.sh  test_deploy.sh  unified_deploy.sh  watcher.py
.github/workflows/: deploy-docker.yml
TwitchChannelPointsMiner/: TwitchChannelPointsMiner.py  utils.py
TwitchChannelPointsMiner/classes/: Chat.py  Discord.py  Twitch.py  TwitchLogin.py  Webhook.py
TwitchChannelPointsMiner/classes/entities/: Streamer.py
assets/: charts.html
