[tool.poetry]
name = "xisz-twitch-channel-points-miner-v2"
version = "0.1.0"
description = ""
authors = ["A user <<>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.6"
flask = "^3.0.0"
security = "==1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
